# 0x960

./: .gitignore  Dockerfile  README.md  openenv.yaml  pyproject.toml
docs/: agent-log-instruction.md  architecture.md  codex-swarm-plan.md  concept.md  demo-script.md  open-questions.md  process.md  training.md  why_chess960.md
docs/diagrams/: mermaid.md
docs/slides/: 0x960_story_deck.html  0x960_story_deck.md  0x960_story_deck_inline.html
docs/slides/assets/: 0x960_story_deck.css
figures/: README.md
media/submission/: 0x960_score_progression.txt  0x960_stockfish_anchors.txt  submission_summary.txt
media/submission/live_demo/: moves.txt
media/submission/live_demo_v2/game1/: moves.txt
media/submission/live_demo_v2/game2/: moves.txt
media/submission/video_v2/: voiceover_33s.txt
notebooks/: 0x960_minimal_trl_openenv_colab.ipynb
scripts/: demo_game.py  generate_bullish_media.py  generate_figures_v3.py  generate_submission_media.py  make_live_match_demo.py  make_live_match_demo_v2.py
src/zero960/: __init__.py
src/zero960/engine/: __init__.py  default_eval.py  match.py  search.py
src/zero960/runtime/: __init__.py  episode.py  types.py  workspace.py
src/zero960/workspace_template/: __init__.py  eval.py
src/zero960_env/: __init__.py  client.py  models.py
src/zero960_env/server/: __init__.py  app.py  environment.py
train/: __init__.py  benchmark_engine.py  benchmark_eval.py  benchmark_league.py  benchmark_uci.py  build_dashboard.py  codex_distill.py  codex_swarm.py  minimal_trl_openenv.py  sft_student.py
